--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -4,6 +4,7 @@
 }
 
 
+/*
 .container{
    border: 1px solid;
     height: 100%;
@@ -14,6 +15,7 @@
     justify-content: space-between;
 
 }
+*/
 
 
 .text {
